--- a/alves/style-rtl.css
+++ b/alves/style-rtl.css
@@ -3410,8 +3410,12 @@ a {
 	text-decoration: none;
 }
 
-.site-info,
 .entry-header,
+.page-header {
+	padding-top: 32px;
+}
+
+.site-info,
 .entry-footer,
 .page-title,
 .author-title,
@@ -3461,16 +3465,6 @@ blockquote p {
 /**
  * 2. Header
  */
-/*
-.site-header {
-	@extend %responsive-alignwide;
-	margin: 0 auto;
-
-	@include media(desktop) {
-		padding-top: $site_main_spacing_vertical;
-	}
-}
-*/
 /**
  * Wide Header & Footer
  */
@@ -3481,7 +3475,7 @@ blockquote p {
 #masthead {
 	padding-right: 0;
 	padding-left: 0;
-	padding-bottom: 0;
+	padding-bottom: 32px;
 }
 
 /**
