--- a/alves/style.css
+++ b/alves/style.css
@@ -3426,10 +3426,16 @@ a {
 	text-decoration: none;
 }
 
-.site-info,
 .entry-header,
+.page-header {
+	padding-top: 32px;
+}
+
+.site-info,
 .entry-footer,
+.entry-header,
 .page-title,
+.page-header,
 .author-title,
 .comments-title,
 .comment-reply-title {
@@ -3477,16 +3483,6 @@ blockquote p {
 /**
  * 2. Header
  */
-/*
-.site-header {
-	@extend %responsive-alignwide;
-	margin: 0 auto;
-
-	@include media(desktop) {
-		padding-top: $site_main_spacing_vertical;
-	}
-}
-*/
 /**
  * Wide Header & Footer
  */
@@ -3497,7 +3493,7 @@ blockquote p {
 #masthead {
 	padding-left: 0;
 	padding-right: 0;
-	padding-bottom: 0;
+	padding-bottom: 32px;
 }
 
 /**
